--- a/app/views/stock_quotes/edit.html.erb
+++ b/app/views/stock_quotes/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @stock_quote %> |
-<%= link_to 'Back', stock_quotes_path %>
+<%= link_to 'Show', [@security, @stock_quote] %> |
+<%= link_to 'Back', security_stock_quotes_path %>
