--- a/app/views/stock_quotes/show.html.erb
+++ b/app/views/stock_quotes/show.html.erb
@@ -2,8 +2,8 @@
 
 <p>
   <strong>Security:</strong>
-  <%= @stock_quote.security %>
+  <%= @stock_quote.security.security %>
 </p>
 
-<%= link_to 'Edit', edit_stock_quote_path(@stock_quote) %> |
-<%= link_to 'Back', stock_quotes_path %>
+<%= link_to 'Edit', edit_security_stock_quote_path(@stock_quote) %> |
+<%= link_to 'Back', security_stock_quotes_path %>
