--- a/app/views/forexes/index.html.erb
+++ b/app/views/forexes/index.html.erb
@@ -27,5 +27,10 @@
 </table>
 
 <br>
+<%= form_tag update_from_feed_forexes_path do %>
+  <%= label_tag(:feed_url, "Feed Url") %>
+  <%= text_field_tag(:feed_url) %>
+  <%= submit_tag("Submit") %>
+<% end %>
 
 <%= link_to 'New Forex', new_forex_path %>
