--- a/app/views/movers/index.html.erb
+++ b/app/views/movers/index.html.erb
@@ -23,5 +23,9 @@
 </table>
 
 <br>
-
+<%= form_tag update_from_feed_movers_path do %>
+  <%= label_tag(:feed_url, "Feed Url") %>
+  <%= text_field_tag(:feed_url) %>
+  <%= submit_tag("Submit") %>
+<% end %>
 <%= link_to 'New Mover', new_mover_path %>
